<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- checkableBehavior="single" es lo que hace que NavigationView dibuje la píldora de
         seleccionado — sin esto los items no son "checkable" y setCheckedItem()/setChecked()
         no tienen ningún efecto visual, aunque el estado interno sí cambie. -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_inicio" />
        <item
            android:id="@+id/nav_viajes"
            android:icon="@drawable/ic_nav_trips"
            android:title="@string/nav_viajes" />
        <item
            android:id="@+id/nav_configuraciones"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_configuraciones" />
    </group>
</menu>
